--- a/package.json
+++ b/package.json
@@ -3,16 +3,23 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "start:server": "json-server db.json --port 3001",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
+    "@types/react": "^17.0.43",
+    "antd": "^4.19.3",
+    "axios": "^0.26.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
+    "json-server": "^0.17.0",
     "vite": "^2.8.0"
   }
 }
